kubernetes/operators/elastic/search/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  hosts:
    - elastic.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: elasticsearch-es-http.elastic.svc.cluster.local
            port:
              number: 9200
